# mandelbrot-opengl

./: CMakeLists.txt  Mandelbrot  README.md  mandelbrot.cpp  shader.glsl
